clean project and rm boilerplate code

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
+    "@angular/cli": "^15.2.4",
     "@angular/compiler-cli": "~15.2.0",
     "@nativescript/ios": "8.5.1",
+    "@nativescript/schematics": "^11.2.0",
     "@nativescript/types": "~8.5.0",
     "@nativescript/webpack": "~5.0.14",
     "@ngtools/webpack": "~15.2.0",
