--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nativescript/angular": "^15.0.0",
     "@nativescript/core": "~8.5.0",
     "@nativescript/theme": "~3.0.2",
+    "nativescript-drop-down": "^6.0.2",
     "rxjs": "~7.6.0",
     "zone.js": "~0.13.0"
   },
@@ -22,7 +23,9 @@
     "@angular-devkit/build-angular": "~15.2.0",
     "@angular/cli": "^15.2.4",
     "@angular/compiler-cli": "~15.2.0",
+    "@nativescript/android": "8.5.0",
     "@nativescript/ios": "8.5.1",
+    "@nativescript/preview-cli": "1.0.2",
     "@nativescript/schematics": "^11.2.0",
     "@nativescript/types": "~8.5.0",
     "@nativescript/webpack": "~5.0.14",
