Fix typo of naming calendar and split logic for the top section into new component called calendar-filter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ns-calender-app",
+  "name": "ns-calendar-app",
   "main": "./src/main.ts",
   "version": "1.0.0",
   "private": true,
