--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nativescript/angular": "^15.0.0",
     "@nativescript/core": "~8.5.0",
     "@nativescript/theme": "~3.0.2",
+    "@ngrx/store": "^15.4.0",
     "nativescript-drop-down": "^6.0.2",
     "rxjs": "~7.6.0",
     "zone.js": "~0.13.0"
